# sqlite_modern_cpp

./: CMakeLists.txt
hdr/: sqlite_modern_cpp.h
hdr/sqlite_modern_cpp/utility/: variant.h
